Bug 327530 gobject assertion failures when running yelp with a11y enabled patch by chpe@gnome.org r=me sr=roc